ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_loop_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (16) at (1, 4) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(1, 2.0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Jump(0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->] (0) edge (1);
		\path[->] (1) edge (0);
		\path[->] (0) edge (3);
		\path[->] (3) edge (4);
		\path[->] (4) edge (8);
		\path[->] (0) edge (3);
		\path[->] (0) edge (9);


                \end{tikzpicture}
            \end{document}
