ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_memory_load_different_functions_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (15) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (20) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (21) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (22) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (23) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (24) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (25) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (28) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (29) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (30) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (31) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (32) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (35) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (36) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (37) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (38) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (39) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (40) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (41) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (42) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (43) at (2, 3) { };
\node[font=\tiny] (note_4) at (-1.5, 0.5) {Store(0, 0.0, 0)};
\node[font=\tiny] (note_5) at (-1.5, 1.5) {Load(1, 0.0, 0)};
\node[font=\tiny] (note_6) at (-1.5, 2.5) {Return([1])};
\node[font=\tiny] (note_7) at (-1.5, 0.5) {Store(0, 0.0, 0)};
\node[font=\tiny] (note_8) at (-1.5, 1.5) {Load(1, 0.0, 0)};
\node[font=\tiny] (note_9) at (-1.5, 2.5) {Return([1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (33) at (6, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (34) at (5, 4) { };
\node[font=\tiny] (note_0) at (2.5, 2.5) {Const(1, -12345.0)};
\node[font=\tiny] (note_1) at (2.5, 3.5) {Call(1, [1], [2])};
\node[font=\tiny] (note_2) at (2.5, 4.5) {Load(3, 0.0, 1)};
\node[font=\tiny] (note_3) at (2.5, 5.5) {Return([])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (2) [bend right] edge  node { } (17);
		\path[->, blue] (2) [bend right] edge  node { } (18);
		\path[->, blue] (2) [bend right] edge  node { } (20);
		\path[->, blue] (2) [bend right] edge  node { } (21);
		\path[->, blue] (2) [bend right] edge  node { } (22);
		\path[->, blue] (3) [bend right] edge  node { } (5);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (2) [bend right] edge  node { } (24);
		\path[->, blue] (2) [bend right] edge  node { } (25);
		\path[->, blue] (1) [bend right] edge  node { } (17);
		\path[->, blue] (1) [bend right] edge  node { } (18);
		\path[->, blue] (1) [bend right] edge  node { } (20);
		\path[->, blue] (1) [bend right] edge  node { } (21);
		\path[->, blue] (1) [bend right] edge  node { } (22);
		\path[->, blue] (2) [bend right] edge  node { } (31);
		\path[->, blue] (2) [bend right] edge  node { } (32);
		\path[->, blue] (0) [bend right] edge  node { } (33);
		\path[->, blue] (0) [bend right] edge  node { } (34);
		\path[->, blue] (8) [bend right] edge  node { } (24);
		\path[->, blue] (8) [bend right] edge  node { } (25);
		\path[->, blue] (8) [bend right] edge  node { } (20);
		\path[->, blue] (8) [bend right] edge  node { } (21);
		\path[->, blue] (8) [bend right] edge  node { } (22);
		\path[->, blue] (1) [bend right] edge  node { } (31);
		\path[->, blue] (1) [bend right] edge  node { } (32);
		\path[->, blue] (8) [bend right] edge  node { } (31);
		\path[->, blue] (8) [bend right] edge  node { } (32);


                \end{tikzpicture}
            \end{document}
